--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 <script>
     const root = document.querySelector("#root");
-    const span = React.createElement(
-        "span", 
+    const h3 = React.createElement(
+        "h3", 
         {id:"sexy-span"}, 
         "Hello I'm a span"
         );
-    ReactDOM.render(span, root);
+    const btn = React.createElement("button", null, "Click me!");
+    const container = React.createElement("div", null, [h3, btn]);
+    ReactDOM.render(container, root);
 </script>   
 
 </html>
