--- a/index.html
+++ b/index.html
@@ -6,19 +6,27 @@
 </body>
 <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-<script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script type="text/babel">
     const root = document.querySelector("#root");
-    const h3 = React.createElement(
-        "h3",
-        {
-            onMouseEnter: () => console.log("mouse entered"),
-        },
-        "Hello I'm a span"
+    const Title = (
+        <h3 id="title" onMouseEnter={() => console.log("mouse entered")}>
+            Hello I'm a span
+        </h3>
     );
-    const btn = React.createElement("button", {
-        onClick: () => console.log("I'm clicked"),
-    }, "Click me!");
-    const container = React.createElement("div", null, [h3, btn]);
+
+    const btn = (
+        <button
+            style={{
+                backgroundColor: "tomato",
+            }}
+            onClick={() => console.log("I'm clicked")}
+        >
+            Click me!
+        </button>
+    );
+
+    const container = React.createElement("div", null, [Title, btn]);
     ReactDOM.render(container, root);
 </script>
 
