--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     const root = document.querySelector("#root");
-    const Title = (
+    const Title = () => (
         <h3 id="title" onMouseEnter={() => console.log("mouse entered")}>
             Hello I'm a span
         </h3>
     );
 
-    const btn = (
+    const Button = () => (
         <button
             style={{
                 backgroundColor: "tomato",
@@ -26,8 +26,13 @@
         </button>
     );
 
-    const container = React.createElement("div", null, [Title, btn]);
-    ReactDOM.render(container, root);
+    const Container = (
+        <div>
+            <Title />
+            <Button />
+        </div>
+    );
+    ReactDOM.render(Container, root);
 </script>
 
 </html>
