--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         </button>
     );
 
-    const Container = (
+    const Container = () => (
         <div>
             <Title />
             <Button />
         </div>
     );
-    ReactDOM.render(Container, root);
+    ReactDOM.render(<Container/>, root);
 </script>
 
 </html>
