--- a/index.html
+++ b/index.html
@@ -9,30 +9,29 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     const root = document.querySelector("#root");
-    const Title = () => (
-        <h3 id="title" onMouseEnter={() => console.log("mouse entered")}>
-            Hello I'm a span
-        </h3>
-    );
+    let counter = 0;
 
-    const Button = () => (
-        <button
-            style={{
-                backgroundColor: "tomato",
-            }}
-            onClick={() => console.log("I'm clicked")}
-        >
-            Click me!
-        </button>
-    );
+    function countUp() {
+        counter += 1;
+        render();
+    }
+
+    function render() {
+        ReactDOM.render(<Container />, root);
+    }
 
     const Container = () => (
         <div>
-            <Title />
-            <Button />
+            <h3>
+                Total Click: {counter}
+            </h3>
+            <button onClick={countUp}>
+                Click me!
+            </button>
         </div>
     );
-    ReactDOM.render(<Container/>, root);
+    
+    render();
 </script>
 
 </html>
