fix function name

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     }
 
     function render() {
-        ReactDOM.render(<Container />, root);
+        ReactDOM.render(<App />, root);
     }
 
-    const Container = () => (
+    const App = () => (
         <div>
             <h3>
                 Total Click: {counter}
