--- a/index.html
+++ b/index.html
@@ -9,26 +9,23 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     const root = document.querySelector("#root");
-    let counter = 0;
 
     function App() {
-        const data = React.useState(0);
-        console.log(data);
-        
+        const [counter, setCounter] = React.useState(0);
+
+        const onClick = () => {
+            setCounter(counter + 1);
+        };
+
         return (
             <div>
-                <h3>
-                    Total Click: 0
-                </h3>
-                <button >
-                    Click me!
-                </button>
+                <h3>Total Clicks: {counter}</h3>
+                <button onClick={onClick}>Click me!</button>
             </div>
         );
     }
 
-
-    render();
+    ReactDOM.render(<App />, root);
 </script>
 
 </html>
