--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         const [counter, setCounter] = React.useState(0);
 
         const onClick = () => {
-            setCounter(counter + 1);
+            // setCounter(counter + 1);
+            setCounter((current) => cuurent+1);
         };
 
         return (
