--- a/index.html
+++ b/index.html
@@ -8,24 +8,39 @@
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-    const root = document.querySelector("#root");
-
     function App() {
-        const [counter, setCounter] = React.useState(0);
-
-        const onClick = () => {
-            // setCounter(counter + 1);
-            setCounter((current) => cuurent+1);
+        const [minutes, setMinutes] = React.useState();
+        const onChange = (event) => {
+            setMinutes(event.target.value);
+        };
+        const reset = () => {
+            setMinutes(0);
         };
 
         return (
             <div>
-                <h3>Total Clicks: {counter}</h3>
-                <button onClick={onClick}>Click me!</button>
+                <h1>Super Converter</h1>
+                <label htmlFor="minutes">Minutes</label>
+                <input
+                    value={minutes}
+                    id="minutes"
+                    placeholder="Minutes"
+                    type="number"
+                    onChange={onChange}
+                />
+                <label htmlFor="hours" >Hours</label>
+                <input
+                    value={minutes/60}
+                    id="hours"
+                    placeholder="Hours"
+                    type="number"
+                />
+                <button onClick={reset}>Reset</button>
             </div>
         );
     }
 
+    const root = document.querySelector("#root");
     ReactDOM.render(<App />, root);
 </script>
 
