--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     function App() {
-        const [minutes, setMinutes] = React.useState();
+        const [inputValue, setInputValue] = React.useState();
+        const [inverted, setInverted] = React.useState(false);
         const onChange = (event) => {
-            setMinutes(event.target.value);
+            setInputValue(event.target.value);
         };
         const reset = () => {
-            setMinutes(0);
+            setInputValue("");
+        };
+        const onInvert = () => {
+            reset();
+            setInverted(current => !current);
         };
 
         return (
@@ -22,20 +27,24 @@
                 <h1>Super Converter</h1>
                 <label htmlFor="minutes">Minutes</label>
                 <input
-                    value={minutes}
+                    value={inputValue === "" ? inputValue : inverted ? inputValue * 60 : inputValue}
                     id="minutes"
                     placeholder="Minutes"
                     type="number"
                     onChange={onChange}
+                    disabled={inverted}
                 />
                 <label htmlFor="hours" >Hours</label>
                 <input
-                    value={minutes/60}
+                    value={inputValue === "" ? inputValue : inverted ? inputValue : inputValue/60}
                     id="hours"
                     placeholder="Hours"
                     type="number"
+                    onChange={onChange}
+                    disabled={!inverted}
                 />
                 <button onClick={reset}>Reset</button>
+                <button onClick={onInvert}>{inverted ? "Turn Back" : "Invert"}</button>
             </div>
         );
     }
