--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-    function App() {
+    function MinutesToHours() {
         const [inputValue, setInputValue] = React.useState();
         const [target_id, setTargetId] = React.useState();
         const onChange = (event) => {
@@ -22,7 +22,7 @@
 
         return (
             <div>
-                <h1>Super Converter</h1>
+                <h3>Minutes to Hours</h3>
                 <input
                     value={target_id === "minutes" ? inputValue : inputValue === "" ? inputValue : inputValue * 60}
                     id="minutes"
@@ -45,6 +45,70 @@
                 />
                 <label htmlFor="hours"> Hours</label>
 
+            </div>
+        );
+    }
+
+    function KilometersToMiles() {
+        const [inputValue, setInputValue] = React.useState();
+        const [target_id, setTargetId] = React.useState();
+        const onChange = (event) => {
+            setTargetId(event.target.id);
+            setInputValue(event.target.value);
+        };
+        const onKeyUp = (event) => {
+            setTargetId(event.target.id);
+            setInputValue(event.target.value);
+        };
+
+        return (
+            <div>
+                <h3>Kilometers to Miles</h3>
+                <input
+                    value={target_id === "km" ? inputValue : inputValue === "" ? inputValue : inputValue / 0.62137}
+                    id="km"
+                    placeholder="Kilometers"
+                    type="number"
+                    onChange={onChange}
+                    onKeyUp={onKeyUp}
+                />
+                <label htmlFor="km"> Kilometers</label>
+
+                <br />
+
+                <input
+                    value={target_id === "mi" ? inputValue : inputValue === "" ? inputValue : inputValue * 0.62137}
+                    id="mi"
+                    placeholder="Miles"
+                    type="number"
+                    onChange={onChange}
+                    onKeyUp={onKeyUp}
+                />
+                <label htmlFor="mi"> Miles</label>
+
+            </div>
+        );
+    }
+
+    function App() {
+        const [index, setIndex] = React.useState("-1");
+
+        const onSelect = (event) => {
+            setIndex(event.target.value);
+        };
+
+        return (
+            <div>
+                <h1>Super Converter</h1>
+                <select value={index} onChange={onSelect}>
+                    <option value="-1">Select Converter</option>
+                    <option value="0">Minutes & Hours</option>
+                    <option value="1">Kilometers & Miles</option>
+                </select>
+                <hr />
+                {index === "-1" ? "Please select your converter": null}
+                {index === "0" ? <MinutesToHours /> : null}
+                {index === "1" ? <KilometersToMiles /> : null}
             </div>
         );
     }
