--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     function Btn({ text, onClick }) {
+        console.log(text + " was rendered");
         return (
             <button
                 style={{
@@ -25,14 +26,15 @@
         );
     }
 
+    const MemorizeBtn = React.memo(Btn);
     function App() {
         const [value, setValue] = React.useState("Save Changes");
         const changeValue = () => { setValue("Revert Changes") };
-        
+
         return (
             <div>
-                <Btn text={value} onClick={changeValue} />
-                <Btn text="Cancel" />
+                <MemorizeBtn text={value} onClick={changeValue} />
+                <MemorizeBtn text="Cancel" />
             </div>
         );
     }
