--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <body>
     <div id="root"></div>
 </body>
-<script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+<script crossorigin src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-    function Btn({ text, onClick }) {
+    function Btn({ text, onClick, fontSize = 14 }) {
         console.log(text + " was rendered");
+        console.log(text, onClick, fontSize);
         return (
             <button
                 style={{
@@ -18,6 +20,7 @@
                     padding: "10px 20px",
                     border: 0,
                     borderRadius: 10,
+                    fontSize: {fontSize},
                 }}
                 onClick={onClick}
             >
@@ -25,16 +28,22 @@
             </button>
         );
     }
-
+    
     const MemorizeBtn = React.memo(Btn);
+    MemorizeBtn.propTypes = {
+        text: PropTypes.string.isRequired,
+        fontSize: PropTypes.number,
+    };
+
     function App() {
         const [value, setValue] = React.useState("Save Changes");
         const changeValue = () => { setValue("Revert Changes") };
 
         return (
             <div>
-                <MemorizeBtn text={value} onClick={changeValue} />
-                <MemorizeBtn text="Cancel" />
+                <MemorizeBtn text={value} onClick={changeValue} fontSize={16} />
+                <MemorizeBtn text={14} />
+                <MemorizeBtn text={"Continue"} />
             </div>
         );
     }
