--- a/index.html
+++ b/index.html
@@ -1,55 +1,155 @@
 <!DOCTYPE html>
 <html>
+<style>
+    * {
+        margin: 0;
+        padding: 0
+    }
+
+    .progressContainer {
+        position: relative;
+        width: 450px;
+        padding: 20px 10px;
+        border: 1px solid #eee;
+        margin-top: 15px;
+        background: #000;
+        height: 20px;
+    }
+
+    .progress {
+        position: absolute;
+        width: calc(100% - 20px);
+        height: 20px;
+    }
+
+    .progressTotal {
+        background: #5D5D5D;
+        border-radius: 10px;
+    }
+
+    .progressNow {
+        width: calc(0% - 20px);
+        background: #FFF;
+        border-radius: 10px;
+    }
+
+    .progressPer {
+        background: transparent;
+        text-align: center;
+        color: #A6A6A6;
+    }
+</style>
 
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <label for="urls">Input urls (seperate with enter)</label>
+        <br>
+        <textarea id="urls" rows="10" cols="150"></textarea>
+        <button id="download">Download</button>
+        <hr>
+        <div class="progressContainer">
+            <div class="progress progressTotal"></div>
+            <div class="progress progressNow"></div>
+            <div class="progress progressPer">0 %</div>
+        </div>
+    </div>
 </body>
 <script crossorigin src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<script type="text/babel">
-    function Btn({ text, onClick, fontSize = 14 }) {
-        console.log(text + " was rendered");
-        console.log(text, onClick, fontSize);
-        return (
-            <button
-                style={{
-                    backgroundColor: "tomato",
-                    color: "white",
-                    padding: "10px 20px",
-                    border: 0,
-                    borderRadius: 10,
-                    fontSize: {fontSize},
-                }}
-                onClick={onClick}
-            >
-                {text}
-            </button>
-        );
-    }
-    
-    const MemorizeBtn = React.memo(Btn);
-    MemorizeBtn.propTypes = {
-        text: PropTypes.string.isRequired,
-        fontSize: PropTypes.number,
-    };
+<script src="/jszip/dist/jszip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js"
+    integrity="sha512-csNcFYJniKjJxRWRV1R7fvnXrycHP6qDR21mgz1ZP55xY5d+aHLfo9/FcGDQLfn2IfngbAHd8LdfsagcCqgTcQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+    const btn = document.body.querySelector("#download");
+    const textarea = document.body.querySelector("#urls");
+    const progressTotal = document.body.querySelector(".progressTotal");
+    const progressNow = document.body.querySelector(".progressNow");
+    const progressPer = document.body.querySelector(".progressPer");
+    var count = 0;
+    var fileURLs = "";
+    var zip = null;
 
-    function App() {
-        const [value, setValue] = React.useState("Save Changes");
-        const changeValue = () => { setValue("Revert Changes") };
+    btn.addEventListener("click", doDonwload);
 
-        return (
-            <div>
-                <MemorizeBtn text={value} onClick={changeValue} fontSize={16} />
-                <MemorizeBtn text={14} />
-                <MemorizeBtn text={"Continue"} />
-            </div>
-        );
+    function doDonwload(event) {
+        event.preventDefault();
+
+        let urls_raw = textarea.value;
+        fileURLs = urls_raw.split(/[ ,\n]+/).filter(url => url);
+        zip = new JSZip();
+        count = 0;
+
+        console.log(fileURLs);
+
+        downloadFile(fileURLs[count], onDownloadComplete);
     }
 
-    const root = document.querySelector("#root");
-    ReactDOM.render(<App />, root);
+    function downloadFile(url, onSuccess) {
+
+        console.log(`${count} : ${url}`);
+        var xhr = new XMLHttpRequest();
+        xhr.onprogress = calculateAndUpdateProgress;
+        xhr.open('GET', url, true);
+        xhr.responseType = "blob";
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState == 4) {
+                if (onSuccess) onSuccess(xhr.response);
+            }
+        }
+        xhr.send();
+    }
+
+    function onDownloadComplete(blobData) {
+        if (count < fileURLs.length) {
+            blobToBase64(blobData, function (binaryData) {
+                // add downloaded file to zip:
+                var explodedURL = fileURLs[count].split("/");
+                var fileName = explodedURL[explodedURL.length - 2] + ".mp4";
+                zip.file(fileName, binaryData, { base64: true });
+                if (count < fileURLs.length - 1) {
+                    count++;
+                    downloadFile(fileURLs[count], onDownloadComplete);
+                }
+                else {
+                    console.log("all files have been downloaded, create the zip");
+                    // all files have been downloaded, create the zip
+                    zip.generateAsync({ type: "blob" })
+                        .then(function (content) {
+                            // save zip
+                            saveAs(content, "download.zip");
+                        });
+                }
+            });
+        }
+    }
+
+    function blobToBase64(blob, callback) {
+        var reader = new FileReader();
+        reader.onload = function () {
+            var dataUrl = reader.result;
+            var base64 = dataUrl.split(',')[1];
+            callback(base64);
+        };
+        reader.readAsDataURL(blob);
+    }
+
+    function calculateAndUpdateProgress(e) {
+        if (e.lengthComputable) {
+            var percentComplete = Math.floor(e.loaded / e.total * 100);
+            progressBar(percentComplete);
+        } else {
+            // not computable
+        }
+    }
+
+    function progressBar(percentComplete) {
+        progressPer.innerText = percentComplete + " %";
+        progressNow.style.width = "calc(" + percentComplete + "% - 20px)";
+    }
+
 </script>
 
 </html>
